--- a/index.html
+++ b/index.html
@@ -2,196 +2,201 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Yıldız Oyunu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Uzay Aşk Oyunu</title>
 <style>
-html,body{
-  margin:0;
-  padding:0;
-  overflow:hidden;
-  font-family:Arial,Helvetica,sans-serif;
-  background:radial-gradient(circle at top, #7a1fa2, #1b0033);
-}
-#game{
-  position:relative;
-  width:100vw;
-  height:100vh;
-}
-#panel{
-  position:absolute;
-  bottom:80px;
-  width:140px;
-  height:26px;
-  left:50%;
-  transform:translateX(-50%);
-  border-radius:20px;
-  background:rgba(255,80,200,0.9);
-  box-shadow:0 0 20px #ff6fd8;
-}
-.item{
-  position:absolute;
-  user-select:none;
-  pointer-events:none;
-}
-.star{ color:#ffd966; text-shadow:0 0 10px #ffd966; font-size:28px; }
-.heart{ color:#ff4d6d; text-shadow:0 0 10px #ff4d6d; font-size:28px; }
-.meteor{
-  font-size:34px;
-  filter:drop-shadow(0 0 12px orange);
-}
-#ui{
-  position:absolute;
-  top:10px;
-  left:10px;
-  color:white;
-  font-size:18px;
-}
-#boxes{
-  position:absolute;
-  bottom:20px;
-  width:100%;
-  display:flex;
-  justify-content:center;
-  gap:10px;
-}
-.box{
-  width:40px;
-  height:40px;
-  border-radius:10px;
-  border:2px solid rgba(255,255,255,0.3);
-}
-#over{
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.75);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
-  color:white;
-}
-#over button{
-  margin-top:15px;
-  padding:10px 22px;
-  border:none;
-  border-radius:14px;
-  background:#ff4d6d;
-  color:white;
-  font-size:18px;
-}
+    body {
+        margin: 0;
+        overflow: hidden;
+        font-family: Arial, sans-serif;
+        background: radial-gradient(circle at top, #6a1b9a, #2b0033);
+    }
+
+    #hud {
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        color: white;
+        font-size: 20px;
+        z-index: 10;
+    }
+
+    .life {
+        color: red;
+        margin-left: 5px;
+    }
+
+    .item {
+        position: absolute;
+        top: -60px;
+        width: 40px;
+        height: 40px;
+        pointer-events: none;
+    }
+
+    .star {
+        background: radial-gradient(circle, #ffe066, #ffb300);
+        clip-path: polygon(
+            50% 0%, 61% 35%, 98% 35%,
+            68% 57%, 79% 91%, 50% 70%,
+            21% 91%, 32% 57%, 2% 35%, 39% 35%
+        );
+        box-shadow: 0 0 15px gold;
+    }
+
+    .heart {
+        background: red;
+        transform: rotate(-45deg);
+        border-radius: 50% 50% 0 0;
+    }
+    .heart::before,
+    .heart::after {
+        content: '';
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        background: red;
+        border-radius: 50%;
+    }
+    .heart::before { top: -20px; left: 0; }
+    .heart::after { left: 20px; top: 0; }
+
+    .meteor {
+        background: radial-gradient(circle, #ff7043, #bf360c);
+        border-radius: 50%;
+        box-shadow: 0 0 20px orange;
+    }
+
+    #panel {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 120px;
+        height: 20px;
+        background: linear-gradient(to right, #ff5fa2, #ff2d7a);
+        border-radius: 20px;
+        box-shadow: 0 0 20px #ff5fa2;
+        touch-action: none;
+    }
+
+    #gameOver {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: rgba(0,0,0,0.7);
+        color: white;
+        font-size: 32px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 20;
+    }
+
+    button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        font-size: 18px;
+        border-radius: 10px;
+        border: none;
+        cursor: pointer;
+    }
 </style>
 </head>
 <body>
 
-<div id="game">
-  <div id="ui">Skor: <span id="score">0</span> <span id="lives">❤️❤️❤️</span></div>
-  <div id="panel"></div>
-  <div id="boxes">
-    <div class="box"></div><div class="box"></div><div class="box"></div>
-    <div class="box"></div><div class="box"></div><div class="box"></div>
-  </div>
-  <div id="over">
-    <h1>Oyun Bitti</h1>
+<div id="hud">
+    Skor: <span id="score">0</span>
+    <span id="lives"></span>
+</div>
+
+<div id="panel"></div>
+
+<div id="gameOver">
+    Oyun Bitti 💔
     <button onclick="location.reload()">Tekrar Oyna</button>
-  </div>
 </div>
 
 <script>
-const game=document.getElementById("game");
-const panel=document.getElementById("panel");
-const scoreUI=document.getElementById("score");
-const livesUI=document.getElementById("lives");
-const over=document.getElementById("over");
+let score = 0;
+let lives = 3;
+const scoreEl = document.getElementById("score");
+const livesEl = document.getElementById("lives");
+const panel = document.getElementById("panel");
+const gameOverEl = document.getElementById("gameOver");
 
-let panelX=innerWidth/2-70;
-let score=0;
-let lives=3;
-let items=[];
-let running=true;
+function updateLives() {
+    livesEl.innerHTML = "";
+    for (let i = 0; i < lives; i++) {
+        livesEl.innerHTML += "❤️";
+    }
+}
+updateLives();
 
-panel.style.left=panelX+"px";
-
-/* PANEL KONTROL */
-let hold=false;
-addEventListener("pointerdown",()=>hold=true);
-addEventListener("pointerup",()=>hold=false);
-addEventListener("pointermove",e=>{
-  if(!hold) return;
-  panelX=e.clientX-panel.offsetWidth/2;
-  panelX=Math.max(0,Math.min(innerWidth-panel.offsetWidth,panelX));
-  panel.style.left=panelX+"px";
+// PANEL SÜRÜKLEME
+let dragging = false;
+panel.addEventListener("pointerdown", () => dragging = true);
+window.addEventListener("pointerup", () => dragging = false);
+window.addEventListener("pointermove", e => {
+    if (dragging) {
+        let x = e.clientX - panel.offsetWidth / 2;
+        x = Math.max(0, Math.min(window.innerWidth - panel.offsetWidth, x));
+        panel.style.left = x + "px";
+    }
 });
 
-/* SPAWN */
-function spawn(type){
-  const d=document.createElement("div");
-  d.className="item "+type;
-  d.x=Math.random()*(innerWidth-40);
-  d.y=-40;
-  d.vy= type==="meteor" ? 3 : 2.2;
-  d.textContent= type==="star"?"⭐": type==="heart"?"❤️":"☄️";
-  game.appendChild(d);
-  items.push(d);
-}
+// NESNE OLUŞTUR
+function spawn(type) {
+    const el = document.createElement("div");
+    el.classList.add("item", type);
+    el.style.left = Math.random() * (window.innerWidth - 40) + "px";
+    document.body.appendChild(el);
 
-for(let i=0;i<6;i++) spawn("meteor");
+    let y = -40;
+    const speed = 2 + Math.random() * 2;
 
-/* ÇARPIŞMA */
-function hit(a,b){
-  return a.x<b.offsetLeft+b.offsetWidth &&
-         a.x+30>b.offsetLeft &&
-         a.y<b.offsetTop+b.offsetHeight &&
-         a.y+30>b.offsetTop;
-}
+    function fall() {
+        y += speed;
+        el.style.top = y + "px";
 
-/* DÖNGÜ */
-function loop(){
-  if(!running) return;
+        const r1 = el.getBoundingClientRect();
+        const r2 = panel.getBoundingClientRect();
 
-  if(Math.random()<0.04) spawn("star");
-  if(Math.random()<0.005) spawn("heart");
+        if (
+            r1.bottom >= r2.top &&
+            r1.left < r2.right &&
+            r1.right > r2.left
+        ) {
+            if (type === "star") score += 10;
+            if (type === "heart" && lives < 3) lives++;
+            if (type === "meteor") lives--;
 
-  items.forEach((it,i)=>{
-    it.y+=it.vy;
-    it.style.left=it.x+"px";
-    it.style.top=it.y+"px";
+            scoreEl.textContent = score;
+            updateLives();
+            el.remove();
 
-    if(hit(it,panel)){
-      if(it.classList.contains("star")){
-        score++;
-        scoreUI.textContent=score;
-      }
-      if(it.classList.contains("heart")){
-        lives=Math.min(3,lives+1);
-      }
-      if(it.classList.contains("meteor")){
-        lives--;
-        spawn("meteor");
-      }
-      updateLives();
-      it.remove(); items.splice(i,1);
-      if(lives<=0) end();
+            if (lives <= 0) gameOver();
+            return;
+        }
+
+        if (y < window.innerHeight) {
+            requestAnimationFrame(fall);
+        } else {
+            el.remove();
+        }
     }
-
-    if(it.y>innerHeight){
-      if(it.classList.contains("meteor")) spawn("meteor");
-      it.remove(); items.splice(i,1);
-    }
-  });
-
-  requestAnimationFrame(loop);
+    fall();
 }
 
-function updateLives(){
-  livesUI.textContent="❤️".repeat(lives);
+function gameOver() {
+    gameOverEl.style.display = "flex";
 }
 
-function end(){
-  running=false;
-  over.style.display="flex";
-}
-
-loop();
+// OYUN DÖNGÜSÜ
+setInterval(() => spawn("star"), 800);
+setInterval(() => spawn("heart"), 4000);
+setInterval(() => spawn("meteor"), 1200);
 </script>
+
 </body>
 </html>
