--- a/index.html
+++ b/index.html
@@ -3,200 +3,205 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Uzay Aşk Oyunu</title>
+<title>Uzay Oyunu</title>
 <style>
-    body {
-        margin: 0;
-        overflow: hidden;
-        font-family: Arial, sans-serif;
-        background: radial-gradient(circle at top, #6a1b9a, #2b0033);
-    }
+html,body{
+  margin:0;
+  padding:0;
+  overflow:hidden;
+  font-family:Arial,Helvetica,sans-serif;
+  background:radial-gradient(circle at top,#5b1c7a,#1b0026);
+}
 
-    #hud {
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        color: white;
-        font-size: 20px;
-        z-index: 10;
-    }
+/* HUD */
+#hud{
+  position:fixed;
+  top:10px;
+  left:10px;
+  color:white;
+  font-size:18px;
+  z-index:10;
+}
 
-    .life {
-        color: red;
-        margin-left: 5px;
-    }
+/* PANEL – %50 KÜÇÜK */
+#panel{
+  position:fixed;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%);
+  width:70px;
+  height:16px;
+  border-radius:20px;
+  background:linear-gradient(90deg,#ff5fa2,#ff2d7a);
+  box-shadow:0 0 25px rgba(255,80,200,.9);
+  touch-action:none;
+}
 
-    .item {
-        position: absolute;
-        top: -60px;
-        width: 40px;
-        height: 40px;
-        pointer-events: none;
-    }
+/* GENEL NESNE */
+.item{
+  position:absolute;
+  top:-80px;
+  pointer-events:none;
+}
 
-    .star {
-        background: radial-gradient(circle, #ffe066, #ffb300);
-        clip-path: polygon(
-            50% 0%, 61% 35%, 98% 35%,
-            68% 57%, 79% 91%, 50% 70%,
-            21% 91%, 32% 57%, 2% 35%, 39% 35%
-        );
-        box-shadow: 0 0 15px gold;
-    }
+/* YILDIZ */
+.star{
+  width:18px;
+  height:18px;
+  background:radial-gradient(circle,#ffe680,#ffb300);
+  clip-path:polygon(
+    50% 0%, 61% 35%, 98% 35%,
+    68% 57%, 79% 91%, 50% 70%,
+    21% 91%, 32% 57%, 2% 35%, 39% 35%
+  );
+  box-shadow:0 0 12px gold;
+}
 
-    .heart {
-        background: red;
-        transform: rotate(-45deg);
-        border-radius: 50% 50% 0 0;
-    }
-    .heart::before,
-    .heart::after {
-        content: '';
-        position: absolute;
-        width: 40px;
-        height: 40px;
-        background: red;
-        border-radius: 50%;
-    }
-    .heart::before { top: -20px; left: 0; }
-    .heart::after { left: 20px; top: 0; }
+/* KALP */
+.heart{
+  width:20px;
+  height:20px;
+  background:#ff4d6d;
+  transform:rotate(-45deg);
+  border-radius:50% 50% 0 0;
+  box-shadow:0 0 12px #ff4d6d;
+}
+.heart::before,.heart::after{
+  content:"";
+  position:absolute;
+  width:20px;
+  height:20px;
+  background:#ff4d6d;
+  border-radius:50%;
+}
+.heart::before{top:-10px;left:0;}
+.heart::after{left:10px;top:0;}
 
-    .meteor {
-        background: radial-gradient(circle, #ff7043, #bf360c);
-        border-radius: 50%;
-        box-shadow: 0 0 20px orange;
-    }
+/* METEOR */
+.meteor{
+  width:16px;
+  height:16px;
+  border-radius:50%;
+  background:radial-gradient(circle,#ffb74d,#e65100);
+  box-shadow:0 0 25px rgba(255,140,0,.9);
+}
+.meteor::after{
+  content:"";
+  position:absolute;
+  top:-45px;
+  left:50%;
+  transform:translateX(-50%);
+  width:6px;
+  height:45px;
+  background:linear-gradient(to top,rgba(255,140,0,.8),transparent);
+  filter:blur(1px);
+}
 
-    #panel {
-        position: fixed;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 120px;
-        height: 20px;
-        background: linear-gradient(to right, #ff5fa2, #ff2d7a);
-        border-radius: 20px;
-        box-shadow: 0 0 20px #ff5fa2;
-        touch-action: none;
-    }
-
-    #gameOver {
-        display: none;
-        position: fixed;
-        inset: 0;
-        background: rgba(0,0,0,0.7);
-        color: white;
-        font-size: 32px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        z-index: 20;
-    }
-
-    button {
-        margin-top: 20px;
-        padding: 10px 20px;
-        font-size: 18px;
-        border-radius: 10px;
-        border: none;
-        cursor: pointer;
-    }
+/* GAME OVER */
+#over{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.7);
+  color:white;
+  font-size:32px;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
+  z-index:20;
+}
+#over button{
+  margin-top:15px;
+  padding:10px 22px;
+  border:none;
+  border-radius:12px;
+  background:#ff4d6d;
+  color:white;
+  font-size:18px;
+}
 </style>
 </head>
 <body>
 
 <div id="hud">
-    Skor: <span id="score">0</span>
-    <span id="lives"></span>
+  Skor: <span id="score">0</span> <span id="lives">❤️❤️❤️</span>
 </div>
 
 <div id="panel"></div>
 
-<div id="gameOver">
-    Oyun Bitti 💔
-    <button onclick="location.reload()">Tekrar Oyna</button>
+<div id="over">
+  Oyun Bitti
+  <button onclick="location.reload()">Tekrar Oyna</button>
 </div>
 
 <script>
-let score = 0;
-let lives = 3;
-const scoreEl = document.getElementById("score");
-const livesEl = document.getElementById("lives");
-const panel = document.getElementById("panel");
-const gameOverEl = document.getElementById("gameOver");
+let score=0;
+let lives=3;
+const scoreEl=document.getElementById("score");
+const livesEl=document.getElementById("lives");
+const panel=document.getElementById("panel");
+const over=document.getElementById("over");
 
-function updateLives() {
-    livesEl.innerHTML = "";
-    for (let i = 0; i < lives; i++) {
-        livesEl.innerHTML += "❤️";
-    }
+function updateLives(){
+  livesEl.textContent="❤️".repeat(lives);
 }
-updateLives();
 
-// PANEL SÜRÜKLEME
-let dragging = false;
-panel.addEventListener("pointerdown", () => dragging = true);
-window.addEventListener("pointerup", () => dragging = false);
-window.addEventListener("pointermove", e => {
-    if (dragging) {
-        let x = e.clientX - panel.offsetWidth / 2;
-        x = Math.max(0, Math.min(window.innerWidth - panel.offsetWidth, x));
-        panel.style.left = x + "px";
-    }
+/* PANEL KONTROL */
+let drag=false;
+panel.addEventListener("pointerdown",()=>drag=true);
+addEventListener("pointerup",()=>drag=false);
+addEventListener("pointermove",e=>{
+  if(!drag) return;
+  let x=e.clientX-panel.offsetWidth/2;
+  x=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x));
+  panel.style.left=x+"px";
 });
 
-// NESNE OLUŞTUR
-function spawn(type) {
-    const el = document.createElement("div");
-    el.classList.add("item", type);
-    el.style.left = Math.random() * (window.innerWidth - 40) + "px";
-    document.body.appendChild(el);
+/* SPAWN */
+function spawn(type){
+  const el=document.createElement("div");
+  el.className="item "+type;
+  el.x=Math.random()*(innerWidth-40);
+  el.y=-60;
+  el.speed= type==="meteor" ? 3 : 2;
+  el.style.left=el.x+"px";
+  document.body.appendChild(el);
 
-    let y = -40;
-    const speed = 2 + Math.random() * 2;
+  function fall(){
+    el.y+=el.speed;
+    el.style.top=el.y+"px";
 
-    function fall() {
-        y += speed;
-        el.style.top = y + "px";
+    const r1=el.getBoundingClientRect();
+    const r2=panel.getBoundingClientRect();
 
-        const r1 = el.getBoundingClientRect();
-        const r2 = panel.getBoundingClientRect();
-
-        if (
-            r1.bottom >= r2.top &&
-            r1.left < r2.right &&
-            r1.right > r2.left
-        ) {
-            if (type === "star") score += 10;
-            if (type === "heart" && lives < 3) lives++;
-            if (type === "meteor") lives--;
-
-            scoreEl.textContent = score;
-            updateLives();
-            el.remove();
-
-            if (lives <= 0) gameOver();
-            return;
-        }
-
-        if (y < window.innerHeight) {
-            requestAnimationFrame(fall);
-        } else {
-            el.remove();
-        }
+    if(
+      r1.bottom>=r2.top &&
+      r1.left<r2.right &&
+      r1.right>r2.left
+    ){
+      if(type==="star"){score+=10;}
+      if(type==="heart" && lives<3){lives++;}
+      if(type==="meteor"){lives--;}
+      scoreEl.textContent=score;
+      updateLives();
+      el.remove();
+      if(lives<=0){over.style.display="flex";}
+      return;
     }
-    fall();
+
+    if(el.y<innerHeight){
+      requestAnimationFrame(fall);
+    }else{
+      el.remove();
+    }
+  }
+  fall();
 }
 
-function gameOver() {
-    gameOverEl.style.display = "flex";
-}
-
-// OYUN DÖNGÜSÜ
-setInterval(() => spawn("star"), 800);
-setInterval(() => spawn("heart"), 4000);
-setInterval(() => spawn("meteor"), 1200);
+/* DÖNGÜ */
+setInterval(()=>spawn("star"),900);
+setInterval(()=>spawn("heart"),5000);
+setInterval(()=>spawn("meteor"),1200);
 </script>
-
 </body>
 </html>
