--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Uzay Oyunu</title>
+
 <style>
 html,body{
   margin:0;
@@ -37,7 +38,7 @@ html,body{
   touch-action:none;
 }
 
-/* GENEL NESNE */
+/* NESNE */
 .item{
   position:absolute;
   top:-80px;
@@ -46,21 +47,19 @@ html,body{
 
 /* YILDIZ */
 .star{
-  width:18px;
-  height:18px;
+  width:18px;height:18px;
   background:radial-gradient(circle,#ffe680,#ffb300);
   clip-path:polygon(
-    50% 0%, 61% 35%, 98% 35%,
-    68% 57%, 79% 91%, 50% 70%,
-    21% 91%, 32% 57%, 2% 35%, 39% 35%
+    50% 0%,61% 35%,98% 35%,
+    68% 57%,79% 91%,50% 70%,
+    21% 91%,32% 57%,2% 35%,39% 35%
   );
   box-shadow:0 0 12px gold;
 }
 
 /* KALP */
 .heart{
-  width:20px;
-  height:20px;
+  width:20px;height:20px;
   background:#ff4d6d;
   transform:rotate(-45deg);
   border-radius:50% 50% 0 0;
@@ -69,8 +68,7 @@ html,body{
 .heart::before,.heart::after{
   content:"";
   position:absolute;
-  width:20px;
-  height:20px;
+  width:20px;height:20px;
   background:#ff4d6d;
   border-radius:50%;
 }
@@ -79,8 +77,7 @@ html,body{
 
 /* METEOR */
 .meteor{
-  width:16px;
-  height:16px;
+  width:16px;height:16px;
   border-radius:50%;
   background:radial-gradient(circle,#ffb74d,#e65100);
   box-shadow:0 0 25px rgba(255,140,0,.9);
@@ -88,11 +85,9 @@ html,body{
 .meteor::after{
   content:"";
   position:absolute;
-  top:-45px;
-  left:50%;
+  top:-45px;left:50%;
   transform:translateX(-50%);
-  width:6px;
-  height:45px;
+  width:6px;height:45px;
   background:linear-gradient(to top,rgba(255,140,0,.8),transparent);
   filter:blur(1px);
 }
@@ -135,18 +130,19 @@ html,body{
 </div>
 
 <script>
-let score=0;
-let lives=3;
+let score=0, lives=3, running=true;
 const scoreEl=document.getElementById("score");
 const livesEl=document.getElementById("lives");
 const panel=document.getElementById("panel");
 const over=document.getElementById("over");
+const items=[];
 
+/* CAN */
 function updateLives(){
   livesEl.textContent="❤️".repeat(lives);
 }
 
-/* PANEL KONTROL */
+/* PANEL */
 let drag=false;
 panel.addEventListener("pointerdown",()=>drag=true);
 addEventListener("pointerup",()=>drag=false);
@@ -163,45 +159,57 @@ function spawn(type){
   el.className="item "+type;
   el.x=Math.random()*(innerWidth-40);
   el.y=-60;
-  el.speed= type==="meteor" ? 3 : 2;
+  el.speed=(type==="meteor"?3:2)+Math.random()*0.3;
   el.style.left=el.x+"px";
   document.body.appendChild(el);
-
-  function fall(){
-    el.y+=el.speed;
-    el.style.top=el.y+"px";
-
-    const r1=el.getBoundingClientRect();
-    const r2=panel.getBoundingClientRect();
-
-    if(
-      r1.bottom>=r2.top &&
-      r1.left<r2.right &&
-      r1.right>r2.left
-    ){
-      if(type==="star"){score+=10;}
-      if(type==="heart" && lives<3){lives++;}
-      if(type==="meteor"){lives--;}
-      scoreEl.textContent=score;
-      updateLives();
-      el.remove();
-      if(lives<=0){over.style.display="flex";}
-      return;
-    }
-
-    if(el.y<innerHeight){
-      requestAnimationFrame(fall);
-    }else{
-      el.remove();
-    }
-  }
-  fall();
+  items.push({el,type});
 }
 
-/* DÖNGÜ */
-setInterval(()=>spawn("star"),900);
-setInterval(()=>spawn("heart"),5000);
-setInterval(()=>spawn("meteor"),1200);
+/* ÇARPIŞMA */
+function hit(a,b){
+  return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
+}
+
+/* ANA DÖNGÜ */
+function loop(){
+  if(!running) return;
+
+  const panelRect=panel.getBoundingClientRect();
+
+  for(let i=items.length-1;i>=0;i--){
+    const o=items[i];
+    o.el.y+=o.el.speed;
+    o.el.style.top=o.el.y+"px";
+
+    const r=o.el.getBoundingClientRect();
+
+    if(hit(r,panelRect)){
+      if(o.type==="star") score+=10;
+      if(o.type==="heart" && lives<3) lives++;
+      if(o.type==="meteor") lives--;
+      scoreEl.textContent=score;
+      updateLives();
+      o.el.remove();
+      items.splice(i,1);
+      if(lives<=0){running=false;over.style.display="flex";}
+      continue;
+    }
+
+    if(o.el.y>innerHeight+50){
+      o.el.remove();
+      items.splice(i,1);
+    }
+  }
+
+  requestAnimationFrame(loop);
+}
+
+/* SPAWN ZAMANLAMA (DENGELİ) */
+setInterval(()=>spawn("star"),850+Math.random()*200);
+setInterval(()=>spawn("heart"),4800+Math.random()*600);
+setInterval(()=>spawn("meteor"),1150+Math.random()*200);
+
+loop();
 </script>
 </body>
 </html>
